--- a/template/SpaceSnack.html
+++ b/template/SpaceSnack.html
@@ -152,7 +152,7 @@
         }
         
         .footer {
-            width: 90%;
+            width: 100%;
             margin: 0 auto;
             margin-top: .1875rem;
             margin-bottom: 20px;
@@ -201,20 +201,20 @@
             padding-top: 0;
             padding-bottom: 0;
             border-radius: 10px;
-            left: 46%;
+            left: 8.5vh;
             transform: translateX(-450px);
-            bottom: -20vh;
+            bottom: -16vh;
             position: absolute;
             margin: 20px;
             background-color: #f3f3f3;
             opacity: 0;
-            width: 1024px;
-            height: 768px;
+            width: 25vh;
+            height: 17vh;
             box-shadow: #c7c7c7 0px 0px 18px;
         }
         
         .close {
-            margin-left: 922px;
+            margin-left: 25.5vh;
             width: 23px;
             height: 23px;
         }
@@ -255,8 +255,7 @@
         <div class="header">
             <div class="content_text_left">
                 <p>Space Snack</p>
-                <span>
-Space Snack is a product already on the market. According to the current sales situation, while maintaining the product image, I developed and designed other packaging display forms for this product by reusing the existing visual graphics of the product and adding new content. And based on the requirements of different vendors, I customized exclusive packaging for different vendors.</span>
+                <span>Space Snack is a product already on the market. According to the current sales situation, while maintaining the product image, I developed and designed other packaging display forms for this product by reusing the existing visual graphics of the product and adding new content. And based on the requirements of different vendors, I customized exclusive packaging for different vendors.</span>
                 <span><br>Work details available upon request.</span>
             </div>
             <div class="content_text_right">
@@ -271,43 +270,36 @@ Space Snack is a product already on the market. According to the current sales s
             </div>
         </div>
         <!--中间内容 -->
-        <!-- <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()> -->
-        <div>
-            <div class="content"><img src="../static/SpaceSnack/Spacesnack.png" alt=""></div>
-            <!--<div class="content"><img src="../static/ChildGainChews/childchews2.png" alt=""></div>
-            <div class="part1">
-                <div class="item"><img src="../static/info (1).jpg" alt=""></div>
-                <div class="item"><img src="../static/info (2).jpg" alt=""></div>
-            </div>
-            <div class="part2"><img src="../static/info (1).png" alt=""></div>
-            <!-- 自动播放autoplay=1
-            <div class="part3"><iframe style="width:84vw; height: 300px; margin: 0 auto;" src="//player.bilibili.com/player.html?rel=0&amp;autoplay=0&aid=456477115&bvid=BV1A5411a75j&cid=215266659&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe></div>
-        </div>-->
-            <!-- 底部 -->
+        <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
+
+         <div class="content">
+            <div><img src="../static/SpaceSnack/Spacesnack.png" alt=""></div>
+
             <div class="other">Other Projects</div>
             <div class="footer" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
-                <div onclick="open_swiper('flg_1')" class="item"><img src="../static/other.png" alt=""></div>
-                <div onclick="open_swiper('flg_2')" class="item"><img src="../static/other.png" alt=""></div>
-                <div onclick="open_swiper('flg_3')" class="item"><img src="../static/other.png" alt=""></div>
+                <div onclick="open_swiper('flg_1')" class="item"><img src="../static/SweetGala/sweetgala.png" alt=""></div>
+               <!-- <div onclick="open_swiper('flg_2')" class="item"><img src="../static/SweetGala/sweetgala.png" alt=""></div>
+                <div onclick="open_swiper('flg_3')" class="item"><img src="../static/other.png" alt=""></div>-->
             </div>
 
             <div class='swiper_content' id="swiper_content"></div>
-            <!-- t1 第几个模板文件  t1_1第几个swiper eg: t1_1_1 第一个模板下第一个是swiper的第一张图 -->
+            <!-- t1 第几个模板文件  t1_1第几个swiper eg: t1_1_1 第一个模板下第一个是swiper的第一张图 -- size:1440*900px>-->
             <div class="swiper_1" id="flg_1">
                 <div class="close" id='close' onclick="close_swiper()"><img src="../static/gb.png" alt=""></div>
                 <div class="swiper-container swiper-container_0 swiper_">
                     <div class="swiper-wrapper">
                         <!--  增加swiper-slide 增加图片数量  -->
                         <div class="swiper-slide">
-                            <div class="swiper_item"><img src="../static/swiper/t1/t1_1_1.png" alt=""></div>
+                            <div class="swiper_item"><img src="../static/SweetGala/sweetgala1.png" alt=""></div>
                         </div>
                         <!--  -->
                         <div class="swiper-slide">
-                            <div class="swiper_item"><img src="../static/swiper/t1/t1_1_2.png" alt=""></div>
+                            <div class="swiper_item"><img src="../static/SweetGala/sweetgala2.png" alt=""></div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="swiper_item"><img src="../static/swiper/t1/t1_1_3.png" alt=""></div>
+                            <div class="swiper_item"><img src="../static/SweetGala/sweetgala3.png" alt=""></div>
                         </div>
+
                     </div>
                     <div class="swiper-pagination swiper-pagination_1"></div>
                     <div class="swiper-button-prev swiper-button-prev_1"></div>
@@ -315,9 +307,9 @@ Space Snack is a product already on the market. According to the current sales s
                 </div>
             </div>
 
-            <!-- -------------------------------------这是一整个swiper--------------------------------------------- -->
+            <!-- -------------------------------------这是一整个swiper---------------------------------------------
             <div class="swiper_1" id="flg_2">
-                <span class="close" id='close' onclick="close_swiper()"><img src="../static/gb.png" alt=""></span>
+                <div class="close" id='close' onclick="close_swiper()"><img src="../static/gb.png" alt=""></div>
                 <div class="swiper-container swiper-container_1 swiper_">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
@@ -335,9 +327,9 @@ Space Snack is a product already on the market. According to the current sales s
                     <div class="swiper-button-next swiper-button-next_2"></div>
                 </div>
             </div>
-            <!-- -------------------------------------这是一整个swiper----------------------------------------- -->
+            <!-- -------------------------------------这是一整个swiper---------------------------------------
             <div class="swiper_1" id="flg_3">
-                <span class="close" id='close' onclick="close_swiper()"><img src="../static/gb.png" alt=""></span>
+                <div class="close" id='close' onclick="close_swiper()"><img src="../static/gb.png" alt=""></div>
                 <div class="swiper-container swiper-container_2 swiper_">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
@@ -354,11 +346,11 @@ Space Snack is a product already on the market. According to the current sales s
                     <div class="swiper-button-prev swiper-button-prev_3"></div>
                     <div class="swiper-button-next swiper-button-next_3"></div>
                 </div>
-            </div>
+            </div>-->
 
 
-        </div>
 
+    </div>
 
 
         <script>
@@ -390,7 +382,7 @@ Space Snack is a product already on the market. According to the current sales s
                 }
                 document.getElementById('swiper_content').style.display = 'block'
                 document.getElementById(flg_id).style.display = "block"
-                document.getElementById(flg_id).style.bottom = '12vh'
+                document.getElementById(flg_id).style.bottom = '2.5vh'
                 document.getElementById(flg_id).style.opacity = 1
 
             }
