--- a/template/ChildGainChews.html
+++ b/template/ChildGainChews.html
@@ -210,7 +210,7 @@
        <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
             <div class="content"><img src="../static/ChildGainChews/childchews1.png" alt=""></div>
             <div class="content"><img src="../static/ChildGainChews/childchews2.png" alt=""></div>
-            <div class="content"><p> Animation Promo Video</p><iframe width=100% height="600" src="https://www.youtube.com/embed/GrDKt7NwfPs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+            <div class="content"><p> Animation Promo Video</p><iframe width=100% height="510" src="https://www.youtube.com/embed/cHGVBb0dSEM?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <!--<img src="../static/info (3).png" alt="">
             </div>
             <div class="part1">
