--- a/template/OffiskyBusinessPhoneSystem.html
+++ b/template/OffiskyBusinessPhoneSystem.html
@@ -39,7 +39,7 @@
 
         .content_text_right {
             margin-left:.225rem;
-            width: 2rem;
+            width: 3.5rem;
         }
 
         .header div {
@@ -198,9 +198,9 @@
                 <span>Babysoft Corporation</span>
                 <p><br>Role</p>
                 <span>Charactor Design </span>
-                <span>Packaging </span>
-                <span>Food Label regulation </span>
-                <span>Box Layout</span>
+                <span>Story Board </span>
+                <span>Motion Graphic</span>
+                <span>Visual Effects</span>
                 </span>
             </div>
         </div>
@@ -215,7 +215,7 @@
             </div>
             <div class="part2"><img src="../static/info (1).png" alt=""></div>
             <!-- 自动播放autoplay=1 -->
-            <div class="content"><iframe width="1220" height="800" src="https://www.youtube.com/embed/GrDKt7NwfPs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+            <div class="content"><iframe width=100% height="510" src="https://www.youtube.com/embed/l5ZiaLW6990?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         </div>
         <!-- 底部
         <div class="other">Other Projects
